[gd_scene load_steps=48 format=3 uid="uid://chw6gbvcglq2b"]

[ext_resource type="Script" uid="uid://1n6qqi8jw2jl" path="res://scripts/player.gd" id="1_onrkg"]
[ext_resource type="Resource" uid="uid://kqrqmsj7k5ut" path="res://Inventory/playerInventory.tres" id="2_dqkch"]
[ext_resource type="Texture2D" uid="uid://koaalqdrdiac" path="res://Art/characters/player.png" id="2_i3pqv"]
[ext_resource type="Script" uid="uid://b4da12ktie4js" path="res://scenes/interaction_component.gd" id="3_qhqgy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("2_i3pqv")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_i3pqv")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("2_i3pqv")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6kj6"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_km0yn"]
atlas = ExtResource("2_i3pqv")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckdwd"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgj0k"]
atlas = ExtResource("2_i3pqv")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uebvl"]
atlas = ExtResource("2_i3pqv")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_knjot"]
atlas = ExtResource("2_i3pqv")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("2_i3pqv")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("2_i3pqv")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcb5e"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vr8a"]
atlas = ExtResource("2_i3pqv")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fujyx"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_56qte"]
atlas = ExtResource("2_i3pqv")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdcp2"]
atlas = ExtResource("2_i3pqv")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyvg2"]
atlas = ExtResource("2_i3pqv")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrhh6"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0safm"]
atlas = ExtResource("2_i3pqv")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fub3s"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s33rg"]
atlas = ExtResource("2_i3pqv")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_up388"]
atlas = ExtResource("2_i3pqv")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7lke"]
atlas = ExtResource("2_i3pqv")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2k2b"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyymx"]
atlas = ExtResource("2_i3pqv")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f05x"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kg1tc"]
atlas = ExtResource("2_i3pqv")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkpyx"]
atlas = ExtResource("2_i3pqv")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mhym"]
atlas = ExtResource("2_i3pqv")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("2_i3pqv")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("2_i3pqv")
region = Rect2(144, 336, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_hqtel"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}],
"loop": true,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6kj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km0yn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckdwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgj0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uebvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knjot")
}],
"loop": true,
"name": &"diam",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}],
"loop": true,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcb5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vr8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fujyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56qte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdcp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyvg2")
}],
"loop": true,
"name": &"jalan_atas",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrhh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0safm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fub3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s33rg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_up388")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7lke")
}],
"loop": true,
"name": &"jalan_bawah",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2k2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyymx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f05x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kg1tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkpyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mhym")
}],
"loop": true,
"name": &"jalan_kanan",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2k2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyymx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f05x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kg1tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkpyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mhym")
}],
"loop": true,
"name": &"jalan_kiri",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}],
"loop": true,
"name": &"side_attack",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sweqy"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_onrkg"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_g2els"]
radius = 12.0

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_onrkg")
inventory = ExtResource("2_dqkch")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_hqtel")
animation = &"diam"
offset = Vector2(0, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_sweqy")

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(0, -17)
shape = SubResource("CircleShape2D_onrkg")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="world_camera" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 816
limit_bottom = 500
limit_smoothed = true
rotation_smoothing_enabled = true

[node name="cliffside_camera" type="Camera2D" parent="."]
position = Vector2(0, -11)
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 370
limit_bottom = 270
limit_smoothed = true
rotation_smoothing_enabled = true

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.223529, 1, 0.0980392, 1)
offset_left = -9.0
offset_top = -4.0
offset_right = 171.0
offset_bottom = 23.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="regen_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="InteractionComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("3_qhqgy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionComponent"]
position = Vector2(0, -17)
shape = SubResource("CircleShape2D_g2els")

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="regen_timer" to="." method="_on_regen_timer_timeout"]
[connection signal="body_entered" from="InteractionComponent" to="." method="_on_interaction_component_body_entered"]
[connection signal="body_entered" from="InteractionComponent" to="InteractionComponent" method="_on_body_entered"]
[connection signal="body_exited" from="InteractionComponent" to="InteractionComponent" method="_on_body_exited"]
